@@ -1,6 +1,7 @@
 4.07_1 0000-00-00 Duncan Ferguson <duncan_ferguson@user.sf.net>
 - Fixed tests on systems where bash is not installed in /bin/bash (Github issue #60)
 - Include link to travis-ci site in release emails for automated build and test reports
+- Rework hostname expansion to be pure-perl rather than relying on the bash shell (Github issue #53)
 
 4.06 2016-03-26 Duncan Ferguson <duncan_ferguson@user.sf.net>
 - Failure to find the terminal binary should not be fatal
